--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
 PORT=5000
-CLIENT_URL=http://localhost:5173
-JWT_SECRET=your_jwt_secret
-MONGO_URI=mongodb://localhost:27017/jobpool
+MONGO_URI=mongodb://mongo:27017/job-pool
+JWT_SECRET=change_me
+JWT_REFRESH_SECRET=another_secret
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+SMTP_USER=you@example.com
+SMTP_PASS=password
+VITE_API_URL=http://localhost:5000/api
