--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "job-pool-client",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -9,20 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
+    "axios": "^1.7.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
-    "zustand": "^4.5.0",
-    "axios": "^1.8.0",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@types/react": "^18.2.23",
-    "@types/react-dom": "^18.2.8",
-    "vite": "^5.1.3",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.3.1",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.4.1",
-    "tailwindcss": "^3.4.2",
-    "postcss": "^8.4.32",
-    "autoprefixer": "^10.4.18"
+    "vite": "^5.1.4"
   }
 }
