--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,28 @@
-version: '3.9'
+version: "3.9"
 services:
+  mongo:
+    image: mongo:7
+    ports:
+      - "27017:27017"
+    volumes:
+      - ./data/db:/data/db
   server:
     build: ./server
-    container_name: jobpool-server
-    working_dir: /app
-    command: npm run dev
     ports:
-      - '5000:5000'
-    environment:
-      - PORT=5000
-      - CLIENT_URL=http://localhost:5173
-      - JWT_SECRET=dev_jwt_secret
-      - MONGO_URI=mongodb://mongo:27017/jobpool
+      - "5000:5000"
     volumes:
       - ./server:/app
+      - /app/node_modules
+    env_file: .env
     depends_on:
       - mongo
-
   client:
     build: ./client
-    container_name: jobpool-client
-    working_dir: /app
-    command: npm run dev
     ports:
-      - '5173:5173'
-    environment:
-      - VITE_API_URL=http://localhost:5000/api
+      - "5173:5173"
     volumes:
       - ./client:/app
+      - /app/node_modules
+    env_file: .env
     depends_on:
       - server
-
-  mongo:
-    image: mongo:6
-    container_name: jobpool-mongo
-    restart: always
-    ports:
-      - '27017:27017'
-    volumes:
-      - mongo_data:/data/db
-
-volumes:
-  mongo_data:
