--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,7 @@
-FROM node:20-alpine
+FROM node:18-alpine
 WORKDIR /app
-COPY package*.json ./
+COPY package.json ./
 RUN npm install
 COPY . .
-CMD ["npm", "run", "dev"]
+RUN npm run build
+CMD ["node", "dist/index.js"]
