--- a/server/package.json
+++ b/server/package.json
@@ -1,31 +1,28 @@
 {
   "name": "job-pool-server",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
   "type": "module",
+  "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "start": "node dist/index.js",
-    "build": "tsc"
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.6",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^4.19.0",
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.1",
-    "morgan": "^1.10.0",
-    "socket.io": "^4.7.5"
+    "mongoose": "^8.5.0",
+    "socket.io": "^4.7.4",
+    "nodemailer": "^6.10.0"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/cors": "^2.8.17",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.11.30",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^20.11.19",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.1"
   }
